@@ -16,7 +16,7 @@
 (defproject cook "1.0.1-SNAPSHOT"
   :description "This launches jobs on a Mesos cluster with fair sharing and preemption"
   :license {:name "Apache License, Version 2.0"}
-  :dependencies [[org.clojure/clojure "1.6.0"]
+  :dependencies [[org.clojure/clojure "1.7.0"]
 
                  ;;Data marshalling
                  [org.clojure/data.codec "0.1.0"]
@@ -90,7 +90,7 @@
                  [liberator "0.13"]
 
                  ;;Databases
-                 [com.datomic/datomic-free "0.9.5206"
+                 [com.datomic/datomic-pro "0.9.5153"
                   :exclusions [org.slf4j/slf4j-api
                                com.fasterxml.jackson.core/jackson-core
                                org.slf4j/jcl-over-slf4j
@@ -98,6 +98,7 @@
                                org.slf4j/log4j-over-slf4j
                                org.slf4j/slf4j-nop
                                joda-time]]
+                 [com.basho.riak/riak-client "1.4.4"]
                  [org.apache.curator/curator-framework "2.7.1"
                   :exclusions [io.netty/netty]]
                  [org.apache.curator/curator-recipes "2.7.1"
@@ -142,7 +143,6 @@
   :main cook.components
 
   :jvm-opts ["-Dpython.cachedir.skip=true"
-             "-XX:MaxPermSize=500M"
              ;"-Dsun.security.jgss.native=true"
              ;"-Dsun.security.jgss.lib=/opt/mitkrb5/lib/libgssapi_krb5.so"
              ;"-Djavax.security.auth.useSubjectCredsOnly=false"
